--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ionic/vue": "^7.4.3",
     "@ionic/vue-router": "^7.4.3",
     "@vue/reactivity": "^3.2.6",
+    "@vuepic/vue-datepicker": "^7.4.0",
     "axios": "^1.6.0",
     "ionicons": "^5.5.3",
     "mitt": "^2.1.0",
