--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "axios": "^1.6.0",
     "ionicons": "^5.5.3",
     "mitt": "^2.1.0",
+    "moment": "^2.29.4",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
